[package]
name = "evtx-message-dump"
version = "0.1.0"
authors = ["Jan Starke <jan.starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33"
winreg = "0.9"
libpefile = "0.2.2"
lazy_static = "1.4"
regex = "1.5"
